update all images format to webp

--- a/about.html
+++ b/about.html
@@ -179,22 +179,22 @@
                     <div class="col-lg-6 about-img wow fadeInUp" data-wow-delay="0.5s">
                         <div class="row">
                             <div class="col-12 text-center">
-                                <img class="img-fluid w-75 rounded-circle bg-light p-3" src="img/about-1.jpg" alt="Brainy Kids - Центр розвитку дітей">
+                                <img class="img-fluid w-75 rounded-circle bg-light p-3" src="img/about-1.webp" alt="Brainy Kids - Центр розвитку дітей">
                             </div>
                             <div class="col-6 text-start" style="margin-top: -100px; z-index: 5;">
-                                <img class="img-fluid w-100 rounded-circle bg-light p-3" src="img/about-2.jpg" alt="Brainy Kids - Освітнє середовище">
+                                <img class="img-fluid w-100 rounded-circle bg-light p-3" src="img/about-2.webp" alt="Brainy Kids - Освітнє середовище">
                             </div>
                             <div class="col-6 text-end" style="margin-top: -100px; z-index: 5;">
-                                <img class="img-fluid w-100 rounded-circle bg-light p-3" src="img/about-3.jpg" alt="Brainy Kids - Викладачі">
+                                <img class="img-fluid w-100 rounded-circle bg-light p-3" src="img/about-3.webp" alt="Brainy Kids - Викладачі">
                             </div>
                             <div class="col-6 text-start" style="margin-top: -50px; z-index: 5;">
-                                <img class="img-fluid w-100 rounded-circle bg-light p-3" src="img/about-4.jpg" alt="Brainy Kids - Дитячий розвиток">
+                                <img class="img-fluid w-100 rounded-circle bg-light p-3" src="img/about-4.webp" alt="Brainy Kids - Дитячий розвиток">
                             </div>
                             <div class="col-6 text-end" style="margin-top: -50px; z-index: 5;">
-                                <img class="img-fluid w-100 rounded-circle bg-light p-3" src="img/about-5.jpg" alt="Brainy Kids - Творчі заняття">
+                                <img class="img-fluid w-100 rounded-circle bg-light p-3" src="img/about-5.webp" alt="Brainy Kids - Творчі заняття">
                             </div>
                             <div class="col-12 text-center" style="margin-top: -100px;">
-                                <img class="img-fluid w-75 rounded-circle bg-light p-3" src="img/about-6.jpg" alt="Brainy Kids - Навчальні програми">
+                                <img class="img-fluid w-75 rounded-circle bg-light p-3" src="img/about-6.webp" alt="Brainy Kids - Навчальні програми">
                             </div>
                         </div>
                     </div>
@@ -216,7 +216,7 @@
                 <div class="row g-4" style="justify-content: center;" role="region" aria-label="Brainy Kids - Наші викладачі">
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item position-relative">
-                            <img class="img-fluid rounded-circle w-75" src="img/team-1.jpg" alt="Brainy Kids - Викладач Гусонька Лілія">
+                            <img class="img-fluid rounded-circle w-75" src="img/team-1.webp" alt="Brainy Kids - Викладач Гусонька Лілія">
                             <div class="team-text">
                                 <h4 class="text-align-center">Гусонька Лілія</h4>
                                 <p>Викладач</p>
@@ -231,7 +231,7 @@
 
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="team-item position-relative">
-                            <img class="img-fluid rounded-circle w-75" src="img/team-2.jpg" alt="Brainy Kids - Викладач Затоковенко Оксана">
+                            <img class="img-fluid rounded-circle w-75" src="img/team-2.webp" alt="Brainy Kids - Викладач Затоковенко Оксана">
                             <div class="team-text">
                                 <h4 class="text-align-center">Затоковенко Оксана</h4>
                                 <p>Викладач</p>
@@ -288,31 +288,31 @@
                         <h3 class="text-white mb-4">Фото галерея</h3>
                         <div class="row g-2 pt-2" role="region" aria-label="Фото галерея Brainy Kids" style="cursor: pointer;">
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-1.jpg" onclick="openModal(0)" alt="Brainy Kids/gallery_01">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-1.webp" onclick="openModal(0)" alt="Brainy Kids/gallery_01">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-2.jpg" onclick="openModal(1)" alt="Brainy Kids/gallery_02">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-2.webp" onclick="openModal(1)" alt="Brainy Kids/gallery_02">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-3.jpg" onclick="openModal(2)" alt="Brainy Kids/gallery_03">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-3.webp" onclick="openModal(2)" alt="Brainy Kids/gallery_03">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-4.jpg" onclick="openModal(3)" alt="Brainy Kids/gallery_04">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-4.webp" onclick="openModal(3)" alt="Brainy Kids/gallery_04">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-5.jpg" onclick="openModal(4)" alt="Brainy Kids/gallery_05">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-5.webp" onclick="openModal(4)" alt="Brainy Kids/gallery_05">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-6.jpg" onclick="openModal(5)" alt="Brainy Kids/gallery_06">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-6.webp" onclick="openModal(5)" alt="Brainy Kids/gallery_06">
                             </div>
                             <div class="col-4" style="display: none;">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-7.jpg" onclick="openModal(6)" alt="Brainy Kids/gallery_07">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-7.webp" onclick="openModal(6)" alt="Brainy Kids/gallery_07">
                             </div>
                             <div class="col-4" style="display: none;">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-8.jpg" onclick="openModal(7)" alt="Brainy Kids/gallery_08">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-8.webp" onclick="openModal(7)" alt="Brainy Kids/gallery_08">
                             </div>
                             <div class="col-4" style="display: none;">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-9.jpg" onclick="openModal(8)" alt="Brainy Kids/gallery_09">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-9.webp" onclick="openModal(8)" alt="Brainy Kids/gallery_09">
                             </div>
                         </div>
                     </div>
