--- a/contact.html
+++ b/contact.html
@@ -241,31 +241,31 @@
                         <h3 class="text-white mb-4">Фото галерея</h3>
                         <div class="row g-2 pt-2" role="region" aria-label="Фото галерея Brainy Kids" style="cursor: pointer;">
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-1.jpg" onclick="openModal(0)" alt="Brainy Kids/gallery_01">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-1.webp" onclick="openModal(0)" alt="Brainy Kids/gallery_01">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-2.jpg" onclick="openModal(1)" alt="Brainy Kids/gallery_02">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-2.webp" onclick="openModal(1)" alt="Brainy Kids/gallery_02">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-3.jpg" onclick="openModal(2)" alt="Brainy Kids/gallery_03">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-3.webp" onclick="openModal(2)" alt="Brainy Kids/gallery_03">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-4.jpg" onclick="openModal(3)" alt="Brainy Kids/gallery_04">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-4.webp" onclick="openModal(3)" alt="Brainy Kids/gallery_04">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-5.jpg" onclick="openModal(4)" alt="Brainy Kids/gallery_05">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-5.webp" onclick="openModal(4)" alt="Brainy Kids/gallery_05">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-6.jpg" onclick="openModal(5)" alt="Brainy Kids/gallery_06">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-6.webp" onclick="openModal(5)" alt="Brainy Kids/gallery_06">
                             </div>
                             <div class="col-4" style="display: none;">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-7.jpg" onclick="openModal(6)" alt="Brainy Kids/gallery_07">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-7.webp" onclick="openModal(6)" alt="Brainy Kids/gallery_07">
                             </div>
                             <div class="col-4" style="display: none;">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-8.jpg" onclick="openModal(7)" alt="Brainy Kids/gallery_08">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-8.webp" onclick="openModal(7)" alt="Brainy Kids/gallery_08">
                             </div>
                             <div class="col-4" style="display: none;">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-9.jpg" onclick="openModal(8)" alt="Brainy Kids/gallery_09">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-9.webp" onclick="openModal(8)" alt="Brainy Kids/gallery_09">
                             </div>
                         </div>
                     </div>
