--- a/testimonial.html
+++ b/testimonial.html
@@ -130,7 +130,7 @@
                     <div class="testimonial-item bg-light rounded p-5" role="article" aria-label="Відгук клієнта 1">
                         <p class="fs-5">Tempor stet labore dolor clita stet diam amet ipsum dolor duo ipsum rebum stet dolor amet diam stet. Est stet ea lorem amet est kasd kasd erat eos</p>
                         <div class="d-flex align-items-center bg-white me-n5" style="border-radius: 50px 0 0 50px;">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-1.jpg" alt="Відгук клієнта 1" style="width: 90px; height: 90px;">
+                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-1.webp" alt="Відгук клієнта 1" style="width: 90px; height: 90px;">
                             <div class="ps-3">
                                 <h3 class="mb-1">Client Name</h3>
                                 <span>Profession</span>
@@ -142,7 +142,7 @@
                     <div class="testimonial-item bg-light rounded p-5" role="article" aria-label="Відгук клієнта 2">
                         <p class="fs-5">Tempor stet labore dolor clita stet diam amet ipsum dolor duo ipsum rebum stet dolor amet diam stet. Est stet ea lorem amet est kasd kasd erat eos</p>
                         <div class="d-flex align-items-center bg-white me-n5" style="border-radius: 50px 0 0 50px;">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-2.jpg" alt="Відгук клієнта 2" style="width: 90px; height: 90px;">
+                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-2.webp" alt="Відгук клієнта 2" style="width: 90px; height: 90px;">
                             <div class="ps-3">
                                 <h3 class="mb-1">Client Name</h3>
                                 <span>Profession</span>
@@ -154,7 +154,7 @@
                     <div class="testimonial-item bg-light rounded p-5" role="article" aria-label="Відгук клієнта 3">
                         <p class="fs-5">Tempor stet labore dolor clita stet diam amet ipsum dolor duo ipsum rebum stet dolor amet diam stet. Est stet ea lorem amet est kasd kasd erat eos</p>
                         <div class="d-flex align-items-center bg-white me-n5" style="border-radius: 50px 0 0 50px;">
-                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-3.jpg" alt="Відгук клієнта 3" style="width: 90px; height: 90px;">
+                            <img class="img-fluid flex-shrink-0 rounded-circle" src="img/testimonial-3.webp" alt="Відгук клієнта 3" style="width: 90px; height: 90px;">
                             <div class="ps-3">
                                 <h3 class="mb-1">Client Name</h3>
                                 <span>Profession</span>
@@ -207,31 +207,31 @@
                         <h3 class="text-white mb-4">Фото галерея</h3>
                         <div class="row g-2 pt-2" role="region" aria-label="Фото галерея Brainy Kids" style="cursor: pointer;">
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-1.jpg" onclick="openModal(0)" alt="Brainy Kids/gallery_01">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-1.webp" onclick="openModal(0)" alt="Brainy Kids/gallery_01">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-2.jpg" onclick="openModal(1)" alt="Brainy Kids/gallery_02">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-2.webp" onclick="openModal(1)" alt="Brainy Kids/gallery_02">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-3.jpg" onclick="openModal(2)" alt="Brainy Kids/gallery_03">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-3.webp" onclick="openModal(2)" alt="Brainy Kids/gallery_03">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-4.jpg" onclick="openModal(3)" alt="Brainy Kids/gallery_04">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-4.webp" onclick="openModal(3)" alt="Brainy Kids/gallery_04">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-5.jpg" onclick="openModal(4)" alt="Brainy Kids/gallery_05">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-5.webp" onclick="openModal(4)" alt="Brainy Kids/gallery_05">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-6.jpg" onclick="openModal(5)" alt="Brainy Kids/gallery_06">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-6.webp" onclick="openModal(5)" alt="Brainy Kids/gallery_06">
                             </div>
                             <div class="col-4" style="display: none;">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-7.jpg" onclick="openModal(6)" alt="Brainy Kids/gallery_07">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-7.webp" onclick="openModal(6)" alt="Brainy Kids/gallery_07">
                             </div>
                             <div class="col-4" style="display: none;">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-8.jpg" onclick="openModal(7)" alt="Brainy Kids/gallery_08">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-8.webp" onclick="openModal(7)" alt="Brainy Kids/gallery_08">
                             </div>
                             <div class="col-4" style="display: none;">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-9.jpg" onclick="openModal(8)" alt="Brainy Kids/gallery_09">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-9.webp" onclick="openModal(8)" alt="Brainy Kids/gallery_09">
                             </div>
                         </div>
                     </div>
