--- a/our-history.html
+++ b/our-history.html
@@ -123,7 +123,7 @@
                     <div class="row g-0">
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s" style="min-height: 50rem;">
                             <div class="position-relative h-100">
-                                <img class="position-absolute w-100 h-100 rounded" src="img/our-history_2.jpg" alt="Brainy Kids - Історія створення"
+                                <img class="position-absolute w-100 h-100 rounded" src="img/our-history_2.webp" alt="Brainy Kids - Історія створення"
                                     style="object-fit: cover;">
                             </div>
                         </div>
@@ -214,31 +214,31 @@
                         <h3 class="text-white mb-4">Фото галерея</h3>
                         <div class="row g-2 pt-2" role="region" aria-label="Фото галерея Brainy Kids" style="cursor: pointer;">
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-1.jpg" onclick="openModal(0)" alt="Brainy Kids/gallery_01">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-1.webp" onclick="openModal(0)" alt="Brainy Kids/gallery_01">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-2.jpg" onclick="openModal(1)" alt="Brainy Kids/gallery_02">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-2.webp" onclick="openModal(1)" alt="Brainy Kids/gallery_02">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-3.jpg" onclick="openModal(2)" alt="Brainy Kids/gallery_03">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-3.webp" onclick="openModal(2)" alt="Brainy Kids/gallery_03">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-4.jpg" onclick="openModal(3)" alt="Brainy Kids/gallery_04">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-4.webp" onclick="openModal(3)" alt="Brainy Kids/gallery_04">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-5.jpg" onclick="openModal(4)" alt="Brainy Kids/gallery_05">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-5.webp" onclick="openModal(4)" alt="Brainy Kids/gallery_05">
                             </div>
                             <div class="col-4">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-6.jpg" onclick="openModal(5)" alt="Brainy Kids/gallery_06">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-6.webp" onclick="openModal(5)" alt="Brainy Kids/gallery_06">
                             </div>
                             <div class="col-4" style="display: none;">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-7.jpg" onclick="openModal(6)" alt="Brainy Kids/gallery_07">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-7.webp" onclick="openModal(6)" alt="Brainy Kids/gallery_07">
                             </div>
                             <div class="col-4" style="display: none;">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-8.jpg" onclick="openModal(7)" alt="Brainy Kids/gallery_08">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-8.webp" onclick="openModal(7)" alt="Brainy Kids/gallery_08">
                             </div>
                             <div class="col-4" style="display: none;">
-                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-9.jpg" onclick="openModal(8)" alt="Brainy Kids/gallery_09">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-9.webp" onclick="openModal(8)" alt="Brainy Kids/gallery_09">
                             </div>
                         </div>
                     </div>
