--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
         <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5 py-lg-0" role="navigation" aria-label="Main Site Navigation">
             <a href="index.html" class="navbar-brand">
                 <h1 class="m-0 text-primary">
-                    <img class="img-fluid rounded" src="img/BrainyKids-logo.png" alt="Brainy Kids - Центр дитячого розвитку">
+                    <img class="logo-icon img-fluid rounded" src="img/BrainyKids-logo.png" alt="Brainy Kids - Центр дитячого розвитку">
                 </h1>
             </a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-label="Toggle Navigation Menu">
@@ -84,7 +84,7 @@
                     <li class="nav-item"><a href="classes.html" class="nav-link">Заняття</a></li>
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Меню</a>
-                        <ul class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0">
+                        <ul class="dropdown-menu rounded-0 rounded-bottom border-0 m-0">
                             <li><a href="facility.html" class="dropdown-item">Наші суперсили</a></li>
                             <li><a href="our-history.html" class="dropdown-item">Наша історія</a></li>
                             <li><a href="appointment.html" class="dropdown-item">Залишити заявку</a></li>
@@ -255,17 +255,17 @@
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                         <h3 class="text-white mb-4">Зв'язатись з нами</h3>
-                        <p class="mb-2">
-                            <a href="https://www.google.com/maps?q=Пр.+Юності,+14+А,+Вінниця,+Україна" target="_blank" aria-label="Локація Brainy Kids у Вінниці" style="text-decoration: none; color: inherit;">
+                        <p class="mb-2 links-footer">
+                            <a href="https://www.google.com/maps/place/Просп.+Юності,+14А,+Вінниця/@49.2286992,28.4078495,17z?hl=uk" target="_blank" aria-label="Локація Brainy Kids у Вінниці" style="text-decoration: none; color: inherit;">
                                 <i class="fa fa-map-marker-alt me-3"></i>Пр. Юності, 14 А, Вінниця, Україна
                             </a>
                         </p>                        
-                        <p class="mb-2">
+                        <p class="mb-2 links-footer">
                             <a href="tel:+380966987178" aria-label="Зателефонувати до Brainy Kids" style="text-decoration: none; color: inherit;">
                                 <i class="fa fa-phone-alt me-3"></i>+38 096 698 71 78
                             </a>
                         </p>                        
-                        <p class="mb-2">
+                        <p class="mb-2 links-footer">
                             <a href="mailto:brainykids.vn@gmail.com" aria-label="Написати на email Brainy Kids" style="text-decoration: none; color: inherit;">
                                 <i class="fa fa-envelope me-3"></i>brainykids.vn@gmail.com
                             </a>
@@ -313,6 +313,15 @@
                             </div>
                             <div class="col-4" style="display: none;">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-9.webp" onclick="openModal(8)" alt="Brainy Kids/gallery_09">
+                            </div>
+                            <div class="col-4" style="display: none;">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-10.webp" onclick="openModal(9)" alt="Brainy Kids/gallery_10">
+                            </div>
+                            <div class="col-4" style="display: none;">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-11.webp" onclick="openModal(10)" alt="Brainy Kids/gallery_11">
+                            </div>
+                            <div class="col-4" style="display: none;">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-12.webp" onclick="openModal(11)" alt="Brainy Kids/gallery_12">
                             </div>
                         </div>
                     </div>
@@ -378,8 +387,10 @@
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+
     <script src="js/open_modal_popup.js"></script>
     <script src="js/footer_gallery_popup.js"></script>
+    <script src="js/spin_logo.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
