--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
         <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5 py-lg-0" role="navigation" aria-label="Головне меню Brainy Kids">
             <a href="index.html" class="navbar-brand">
                 <h1 class="m-0 text-primary">
-                    <img class="img-fluid rounded" src="img/BrainyKids-logo.png" alt="Brainy Kids - Логотип">
+                    <img class="logo-icon img-fluid rounded" src="img/BrainyKids-logo.png" alt="Brainy Kids - Логотип">
                 </h1>
             </a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-label="Перемикання навігації">
@@ -125,7 +125,8 @@
                 </div>
                 <div class="row g-4 mb-5">
                     <div class="col-md-6 col-lg-4 text-center wow fadeInUp" data-wow-delay="0.1s">
-                        <a href="https://www.google.com/maps?q=Пр.+Юності,+14+А,+Вінниця,+Україна" target="_blank" aria-label="Локація Brainy Kids у Вінниці" style="text-decoration: none; color: inherit;">
+                        <a href="https://www.google.com/maps/place/Просп.+Юності,+14А,+Вінниця/@49.2286992,28.4078495,17z?hl=uk" 
+                        target="_blank" aria-label="Локація Brainy Kids у Вінниці" style="text-decoration: none; color: inherit;">
                             <div class="bg-light rounded-circle d-inline-flex align-items-center justify-content-center mb-4" style="width: 75px; height: 75px;">
                                 <i class="fa fa-map-marker-alt fa-2x text-primary"></i>
                             </div>
@@ -189,9 +190,10 @@
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
                             <div class="position-relative h-100">
-                                <iframe class="position-relative rounded w-100 h-100" 
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2605.5163300909776!2d28.407849476485833!3d49.22869917138478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472d5c5cd8bb70b9%3A0xa0098b19a6abfade!2z0L_RgNC-0YHQvy4g0K7QvdC-0YHRgtC4LCAxNNCQLCDQktC40L3QvdC40YbQsCwg0JLQuNC90L3QuNGG0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCAyMTAwMA!5e0!3m2!1sru!2sua!4v1748698270947!5m2!1sru!2sua" 
-                                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                                <iframe class="position-relative rounded w-100 h-100"
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2605.5163300909776!2d28.407849476485833!3d49.22869917138478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472d5c5cd8bb70b9%3A0xa0098b19a6abfade!2z0L_RgNC-0YHQvy4g0K7QvdC-0YHRgtC4LCAxNNCQLCDQktC40L3QvdC40YbQsCwg0JLQuNC90L3QuNGG0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCAyMTAwMA!5e0!3m2!1suk!2sua!4v1748698270947!5m2!1suk!2sua"
+                                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade">
                                 </iframe>
                             </div>
                         </div>
@@ -208,17 +210,17 @@
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
                         <h3 class="text-white mb-4">Зв'язатись з нами</h3>
-                        <p class="mb-2">
-                            <a href="https://www.google.com/maps?q=Пр.+Юності,+14+А,+Вінниця,+Україна" target="_blank" aria-label="Локація Brainy Kids у Вінниці" style="text-decoration: none; color: inherit;">
+                        <p class="mb-2 links-footer">
+                            <a href="https://www.google.com/maps/place/Просп.+Юності,+14А,+Вінниця/@49.2286992,28.4078495,17z?hl=uk" target="_blank" aria-label="Локація Brainy Kids у Вінниці" style="text-decoration: none; color: inherit;">
                                 <i class="fa fa-map-marker-alt me-3"></i>Пр. Юності, 14 А, Вінниця, Україна
                             </a>
                         </p>                        
-                        <p class="mb-2">
+                        <p class="mb-2 links-footer">
                             <a href="tel:+380966987178" aria-label="Зателефонувати до Brainy Kids" style="text-decoration: none; color: inherit;">
                                 <i class="fa fa-phone-alt me-3"></i>+38 096 698 71 78
                             </a>
                         </p>                        
-                        <p class="mb-2">
+                        <p class="mb-2 links-footer">
                             <a href="mailto:brainykids.vn@gmail.com" aria-label="Написати на email Brainy Kids" style="text-decoration: none; color: inherit;">
                                 <i class="fa fa-envelope me-3"></i>brainykids.vn@gmail.com
                             </a>
@@ -266,6 +268,15 @@
                             </div>
                             <div class="col-4" style="display: none;">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-9.webp" onclick="openModal(8)" alt="Brainy Kids/gallery_09">
+                            </div>
+                            <div class="col-4" style="display: none;">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-10.webp" onclick="openModal(9)" alt="Brainy Kids/gallery_10">
+                            </div>
+                            <div class="col-4" style="display: none;">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-11.webp" onclick="openModal(10)" alt="Brainy Kids/gallery_11">
+                            </div>
+                            <div class="col-4" style="display: none;">
+                                <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-12.webp" onclick="openModal(11)" alt="Brainy Kids/gallery_12">
                             </div>
                         </div>
                     </div>
@@ -331,8 +342,10 @@
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    
     <script src="js/open_modal_popup.js"></script>
     <script src="js/footer_gallery_popup.js"></script>
+    <script src="js/spin_logo.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
