debug testimonial css

--- a/about.html
+++ b/about.html
@@ -123,9 +123,8 @@
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                         <h1 class="mb-4 text-center">"Brainy Kids" - Крок до успішного майбутнього вашої дитини!</h1>
                         <p class="justify-text">Центр дитячого розвитку "Brainy Kids" розпочав свою роботу в травні 2024 року – місце, 
-                            де кожна дитина відкриває свій унікальний потенціал. Ми – команда захоплених педагогів 
-                            та дитячих психологів, об'єднаних спільною метою: допомогти вашій дитині зробити перші 
-                            впевнені кроки на шляху до знань та успіху.
+                            де кожна дитина відкриває свій унікальний потенціал. Ми – команда педагогів об'єднаних спільною метою: 
+                            допомогти вашій дитині зробити перші впевнені кроки на шляху до знань та успіху.
                         </p>
                         <p class="justify-text">Ми віримо, що кожна дитина – це яскрава зірочка, яка потребує дбайливого огранювання. 
                             Наша місія полягає в тому, щоб створити сприятливе та надихаюче середовище, де діти 
@@ -219,7 +218,7 @@
                             <img class="img-fluid rounded-circle w-75" src="img/team-1.webp" alt="Brainy Kids - Викладач Гусонька Лілія">
                             <div class="team-text">
                                 <h4 class="text-align-center">Гусонька Лілія</h4>
-                                <p>Викладач</p>
+                                <p>Кожна дитина є унікальною зірочкою, що сяє своїм власним світлом.</p>
                                 <!-- <div class="d-flex align-items-center">
                                     <a class="btn btn-square btn-primary mx-1" href="#" aria-label="Facebook профіль Гусонька Лілія"><i class="fab fa-facebook-f"></i></a>
                                     <a class="btn btn-square btn-primary mx-1" href="#" aria-label="Twitter профіль Гусонька Лілія"><i class="fab fa-twitter"></i></a>
@@ -234,7 +233,7 @@
                             <img class="img-fluid rounded-circle w-75" src="img/team-2.webp" alt="Brainy Kids - Викладач Затоковенко Оксана">
                             <div class="team-text">
                                 <h4 class="text-align-center">Затоковенко Оксана</h4>
-                                <p>Викладач</p>
+                                <p>Навіть найменший крок дитини - це великий рух уперед. І я цьому радію.</p>
                                 <!-- <div class="d-flex align-items-center">
                                     <a class="btn btn-square btn-primary mx-1" href="#" aria-label="Facebook профіль Затоковенко Оксана"><i class="fab fa-facebook-f"></i></a>
                                     <a class="btn btn-square btn-primary mx-1" href="#" aria-label="Twitter профіль Затоковенко Оксана"><i class="fab fa-twitter"></i></a>
