--- a/appointment.html
+++ b/appointment.html
@@ -122,7 +122,7 @@
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                             <div class="h-100 d-flex flex-column justify-content-center p-5">
                                 <h1 class="mb-5">Створити заявку</h1>
-                                <form>
+                                <form onsubmit="return false;" id="application-form"> 
                                     <div class="row g-3">
                                         <div class="col-sm-6">
                                             <div class="form-floating">
@@ -155,7 +155,10 @@
                                             </div>
                                         </div>
                                         <div class="col-12">
-                                            <button class="btn btn-primary w-100 py-3" type="submit" aria-label="Надіслати заявку">Надіслати</button>
+                                        <div id="application-feedback"
+                                            style="display: none; opacity: 0; transition: opacity 0.5s ease; color: white; padding: 10px; border-radius: 5px; margin-top: 10px; margin-bottom: 10px;">
+                                        </div>
+                                            <button class="btn btn-primary w-100 py-3" type="button" onclick="sendApplication()">Надіслати</button>
                                         </div>
                                     </div>
                                 </form>
@@ -252,9 +255,10 @@
                     <div class="col-lg-3 col-md-6">
                         <h3 class="text-white mb-4">Залиште номер телефону</h3>
                         <p>Ми з Вами зв'яжемось.</p>
+                        <div id="feedback" class="mt-3"></div>
                         <div class="position-relative mx-auto">
-                            <input id="phone" class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Ваш номер телефону">
-                            <button class="btn btn-primary py-2 mt-2" onclick="sendPhoneNumber()">Надіслати</button>
+                            <input id="phone" class="form-control bg-transparent text-white border-light py-3 ps-4 pe-5" type="text" placeholder="Ваш номер телефону">
+                            <button class="btn btn-primary py-2 mt-3 w-100" onclick="sendPhoneNumber()">Надіслати</button>
                         </div>                
                     </div>
                 </div>
@@ -315,6 +319,8 @@
     <script src="js/open_modal_popup.js"></script>
     <script src="js/footer_gallery_popup.js"></script>
     <script src="js/spin_logo.js"></script>
+    <script src="js/phone_feed_back_client.js"></script>
+    <script src="js/application_form.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
