--- a/classes.html
+++ b/classes.html
@@ -714,9 +714,10 @@
                     <div class="col-lg-3 col-md-6">
                         <h3 class="text-white mb-4">Залиште номер телефону</h3>
                         <p>Ми з Вами зв'яжемось.</p>
+                        <div id="feedback" class="mt-3"></div>
                         <div class="position-relative mx-auto">
-                            <input id="phone" class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Ваш номер телефону">
-                            <button class="btn btn-primary py-2 mt-2" onclick="sendPhoneNumber()">Надіслати</button>
+                            <input id="phone" class="form-control bg-transparent text-white border-light py-3 ps-4 pe-5" type="text" placeholder="Ваш номер телефону">
+                            <button class="btn btn-primary py-2 mt-3 w-100" onclick="sendPhoneNumber()">Надіслати</button>
                         </div>                
                     </div>
                 </div>
@@ -1279,6 +1280,7 @@
     <script src="js/classes_modal_poup.js"></script>
     <script src="js/footer_gallery_popup.js"></script>
     <script src="js/spin_logo.js"></script>
+    <script src="js/phone_feed_back_client.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
