Update SEO tags

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Meta Data -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Brainy Kids - Центр дитячого розвитку">
+    <meta name="author" content="Brainy Kids - Дошколярик, підготовка до школи у Вінниці">
     
     <!-- SEO Meta Tags -->
     <title>Brainy Kids - Центр дитячого розвитку у Вінниці | Підготовка до школи, англійська, логопед</title>
@@ -18,7 +18,7 @@
     <meta name="robots" content="index, follow">
     
     <!-- Open Graph (Social Sharing) -->
-    <meta property="og:title" content="Brainy Kids - Центр дитячого розвитку у Вінниці">
+    <meta property="og:title" content="Brainy Kids - Центр дитячого розвитку у Вінниці | Дошколярик, підготовка до школи у Вінниці">
     <meta property="og:description" content="Підготовка до школи, дошколярик, англійська, логопед. Ваша дитина заслуговує найкраще навчання!">
     <meta property="og:image" content="img/BrainyKids-logo.png">
     <meta property="og:url" content="https://yourwebsite.com">
@@ -110,7 +110,7 @@
                             <div class="row justify-content-start">
                                 <div class="col-10 col-lg-8">
                                     <h1 class="display-2 text-white animated slideInDown mb-4">Brainy Kids<br/><p class="display-4">Центр дитячого розвитку</p></h1>
-                                    <h2 class="display-4" style="display: none;">Центр дитячого розвитку у Вінниці</h2>
+                                    <h2 class="display-4" style="display: none;">Дошколярик, підготовка до школи у Вінниці</h2>
                                     <p class="fs-5 fw-medium text-white mb-4 pb-2">Це сучасний центр розвитку дітей у Вінниці, створений для малюків віком 4–6 років</p>
                                     <a href="classes.html" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft">Дізнатись більше</a>
                                     <a href="appointment.html" class="btn btn-dark rounded-pill py-sm-3 px-sm-5 animated slideInRight">Записатись на курс</a>
