Update maps and addr link

--- a/about.html
+++ b/about.html
@@ -254,7 +254,7 @@
                     <div class="col-lg-3 col-md-6">
                         <h3 class="text-white mb-4">Зв'язатись з нами</h3>
                         <p class="mb-2 links-footer">
-                            <a href="https://www.google.com/maps/place/Просп.+Юності,+14А,+Вінниця/@49.2286992,28.4078495,17z?hl=uk" target="_blank" aria-label="Локація Brainy Kids у Вінниці" style="text-decoration: none; color: inherit;">
+                            <a href="https://maps.app.goo.gl/Q9dwa8q3i92Adpqa6?hl=uk" target="_blank" aria-label="Локація Brainy Kids у Вінниці" style="text-decoration: none; color: inherit;">
                                 <i class="fa fa-map-marker-alt me-3"></i>Пр. Юності, 14 А, Вінниця, Україна
                             </a>
                         </p>                        
