--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
                 </div>
                 <div class="row g-4 mb-5">
                     <div class="col-md-6 col-lg-4 text-center wow fadeInUp" data-wow-delay="0.1s">
-                        <a href="https://www.google.com/maps/place/Просп.+Юності,+14А,+Вінниця/@49.2286992,28.4078495,17z?hl=uk" 
+                        <a href="https://maps.app.goo.gl/Q9dwa8q3i92Adpqa6?hl=uk" 
                         target="_blank" aria-label="Локація Brainy Kids у Вінниці" style="text-decoration: none; color: inherit;">
                             <div class="bg-light rounded-circle d-inline-flex align-items-center justify-content-center mb-4" style="width: 75px; height: 75px;">
                                 <i class="fa fa-map-marker-alt fa-2x text-primary"></i>
@@ -194,7 +194,7 @@
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
                             <div class="position-relative h-100">
                                 <iframe class="position-relative rounded w-100 h-100"
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2605.5163300909776!2d28.407849476485833!3d49.22869917138478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472d5c5cd8bb70b9%3A0xa0098b19a6abfade!2z0L_RgNC-0YHQvy4g0K7QvdC-0YHRgtC4LCAxNNCQLCDQktC40L3QvdC40YbQsCwg0JLQuNC90L3QuNGG0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCAyMTAwMA!5e0!3m2!1suk!2sua!4v1748698270947!5m2!1suk!2sua"
+                                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1302.7583066794687!2d28.4109713!3d49.2286938!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xaf2d4f5403e2713b%3A0x10c6eaeb541e3d5c!2zQnJhaW55IEtpZHMsINCS0ZbQvdC90LjRhtGPIC0g0YbQtdC90YLRgCDQtNC40YLRj9GH0L7Qs9C-INGA0L7Qt9Cy0LjRgtC60YMsINC00L7RiNC60ZbQu9GM0L3Rj9GC0LAsINC00L7RiNC60L7Qu9GP0YDQuNC6!5e0!3m2!1suk!2sua!4v1752435890275!5m2!1suk!2sua"
                                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                                     referrerpolicy="no-referrer-when-downgrade">
                                 </iframe>
@@ -214,7 +214,7 @@
                     <div class="col-lg-3 col-md-6">
                         <h3 class="text-white mb-4">Зв'язатись з нами</h3>
                         <p class="mb-2 links-footer">
-                            <a href="https://www.google.com/maps/place/Просп.+Юності,+14А,+Вінниця/@49.2286992,28.4078495,17z?hl=uk" target="_blank" aria-label="Локація Brainy Kids у Вінниці" style="text-decoration: none; color: inherit;">
+                            <a href="https://maps.app.goo.gl/Q9dwa8q3i92Adpqa6?hl=uk" target="_blank" aria-label="Локація Brainy Kids у Вінниці" style="text-decoration: none; color: inherit;">
                                 <i class="fa fa-map-marker-alt me-3"></i>Пр. Юності, 14 А, Вінниця, Україна
                             </a>
                         </p>                        
