--- a/testimonial.html
+++ b/testimonial.html
@@ -340,6 +340,20 @@
                     </div>
 
                 </div>
+
+                <div class="d-flex justify-content-center p-2" data-wow-delay="0.2s">
+                    <a class="testimonial-style-link px-5 py-3" href="https://maps.app.goo.gl/1ufY23fvLwCWL17o6" target="_blank" aria-label="Написати відгук про Brainy Kids в Google">
+                        Залиште відгук про Brainy Kids в     
+                        <span style="color: #EA4335;">&nbsp;</span>
+                        <span style="color: #4285F4;">G</span>
+                        <span style="color: #FBBC05;">o</span>
+                        <span style="color: #34A853;">o</span>
+                        <span style="color: #EA4335;">g</span>
+                        <span style="color: #4285F4;">l</span>
+                        <span style="color: #FBBC05;">e</span>
+                    </a>
+                </div>
+
             </div>
         </div>
         <!-- Testimonial End -->
@@ -367,10 +381,10 @@
                             </a>
                         </p>                        
                         <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/brainy_kids_vn" aria-label="Instagram Brainy Kids"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/share/16Bw61kLCU/" aria-label="Facebook Brainy Kids"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href="https://www.tiktok.com/@.brainy.kids" aria-label="TikTok Brainy Kids"><i class="fab fa-tiktok"></i></a>
-                            <a class="btn btn-outline-light btn-social" href="https://telegram.im/@brainykids_vn" aria-label="Telegram Brainy Kids"><i class="fab fa-telegram-plane"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/brainy_kids_vn?igsh=amp3ODhtYW81ZjB5" target="_blank" aria-label="Instagram Brainy Kids"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/share/16Bw61kLCU/" target="_blank" aria-label="Facebook Brainy Kids"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.tiktok.com/@.brainy.kids?_t=ZM-8wD4I3RKgsQ&_r=1" target="_blank" aria-label="TikTok Brainy Kids"><i class="fab fa-tiktok"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://t.me/brainykids_vn" target="_blank" aria-label="Telegram Brainy Kids"><i class="fab fa-telegram-plane"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
@@ -451,16 +465,16 @@
                 <div class="modal-body">
                     <p>Веселі моменти, корисні поради й новини — у наших соцмережах.</p>
                     <div class="d-flex justify-content-center pt-2">
-                        <a class="btn btn-social btn-instagram" href="https://www.instagram.com/brainy_kids_vn?igsh=amp3ODhtYW81ZjB5">
+                        <a class="btn btn-social btn-instagram" href="https://www.instagram.com/brainy_kids_vn?igsh=amp3ODhtYW81ZjB5" target="_blank">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a class="btn btn-social btn-facebook" href="https://www.facebook.com/share/16Bw61kLCU/">
+                        <a class="btn btn-social btn-facebook" href="https://www.facebook.com/share/16Bw61kLCU/" target="_blank">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a class="btn btn-social btn-tiktok" href="https://www.tiktok.com/@.brainy.kids?_t=ZM-8wD4I3RKgsQ&_r=1">
+                        <a class="btn btn-social btn-tiktok" href="https://www.tiktok.com/@.brainy.kids?_t=ZM-8wD4I3RKgsQ&_r=1" target="_blank">
                             <i class="fab fa-tiktok"></i>
                         </a>
-                        <a class="btn btn-social btn-telegram" href="https://telegram.im/@brainykids_vn">
+                        <a class="btn btn-social btn-telegram" href="https://t.me/brainykids_vn" target="_blank">
                             <i class="fab fa-telegram-plane"></i>
                         </a>
                     </div>
