Update feedback link Google

--- a/testimonial.html
+++ b/testimonial.html
@@ -343,14 +343,16 @@
 
                 <div class="d-flex justify-content-center p-2" data-wow-delay="0.2s">
                     <a class="testimonial-style-link px-5 py-3" href="https://maps.app.goo.gl/1ufY23fvLwCWL17o6" target="_blank" aria-label="Написати відгук про Brainy Kids в Google">
-                        Залиште відгук про Brainy Kids в     
-                        <span style="color: #EA4335;">&nbsp;</span>
-                        <span style="color: #4285F4;">G</span>
-                        <span style="color: #FBBC05;">o</span>
-                        <span style="color: #34A853;">o</span>
-                        <span style="color: #EA4335;">g</span>
-                        <span style="color: #4285F4;">l</span>
-                        <span style="color: #FBBC05;">e</span>
+                        Залиште відгук про Brainy Kids в 
+                        <lable class="google-word">
+                            <span style="color: #EA4335;">&nbsp;</span>
+                            <span style="color: #4285F4;">G</span>
+                            <span style="color: #FBBC05;">o</span>
+                            <span style="color: #34A853;">o</span>
+                            <span style="color: #EA4335;">g</span>
+                            <span style="color: #4285F4;">l</span>
+                            <span style="color: #FBBC05;">e</span>
+                        </lable>
                     </a>
                 </div>
 
