--- a/appointment.html
+++ b/appointment.html
@@ -150,6 +150,12 @@
                                         </div>
                                         <div class="col-12">
                                             <div class="form-floating">
+                                                <input class="form-control border-0" type="text" id="cphone" placeholder="Ваш номер телефону" aria-label="Ваш номер телефону">
+                                                <label for="cage">Номер телефону</label>
+                                            </div>
+                                        </div>
+                                        <div class="col-12">
+                                            <div class="form-floating">
                                                 <textarea class="form-control border-0" placeholder="Залиште повідомлення тут" id="message" style="height: 20vh" aria-label="Повідомлення"></textarea>
                                                 <label for="message">Повідомлення</label>
                                             </div>
