--- a/contact.html
+++ b/contact.html
@@ -170,8 +170,8 @@
                                         </div>
                                         <div class="col-12">
                                             <div class="form-floating">
-                                                <input type="text" class="form-control border-0" id="subject" placeholder="Тема" aria-label="Тема повідомлення">
-                                                <label for="subject">Тема</label>
+                                                <input class="form-control border-0" type="text" id="cphone" placeholder="Ваш номер телефону" aria-label="Ваш номер телефону">
+                                                <label for="cage">Номер телефону</label>
                                             </div>
                                         </div>
                                         <div class="col-12">
